--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -42,3 +42,15 @@ jobs:
          - name: Login to AWS ECR
            id: login-ecr
            uses: aws-actions/amazon-ecr-login@v1
+         - name: Build, tag and push image to Amazon ECR
+           id: build-image
+           env:
+             ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+             ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
+           run: |
+             # Build a docker container
+             # push it to ECR so that it can run
+             # be deploye to ECR
+             docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+             docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+             echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
